--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgustinaCortesPortfolio - Contact</title>
-    <meta name="description" content="Send a message to contact me.">
-    <link
-      rel="shortcut icon"
-      href="../images/favicon3.png"
-      type="image/x-icon"
-    />
-    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV">
+    <meta name="description" content="Send a message to contact me." />
+    <link rel="shortcut icon" href="../images/favicon3.png" type="image/x-icon"/>
+    <meta name="keywords" content="Design, Portfolio, UX, UI, Web, Multimedia, Argentina, CV"/>
 
     <!--link bootstrap css-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <!--link aos-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
     <!--link css-->
     <link rel="stylesheet" href="../styles/main.css" />
+    <!--link fontawsome-->
+    <script src="https://kit.fontawesome.com/78fec969a8.js" crossorigin="anonymous"></script>
   </head>
 
-  
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -100,9 +96,9 @@
         <div class="col-lg-4 sm-12">
           <h3>Or you can find me at..</h3>
           <div class="contact-info d-flex flex-column justify-items-around p-3">
-            <ul class="social-link ">
+            <ul class="social-link">
               <li class="d-flex align-items-center">
-                <i class="fa-brands fa-linkedin-in p-3"> </i>
+                <i class="fa-brands fa-linkedin-in p-3"></i>
                 <a
                   class="nav-link"
                   href="https://www.linkedin.com/in/agustina-cortes1129/"
@@ -125,11 +121,7 @@
                 Agustinaenlaluna
               </li>
             </ul>
-            <img
-              class="img p-5"
-              src="../images/asset1.png"
-              alt="flor"
-            />
+            <img class="img p-5" src="../images/asset1.png" alt="flor" />
           </div>
         </div>
       </div>
@@ -182,16 +174,16 @@
       </nav>
     </footer>
 
-     <!--link bootstrap js-->
-     <script
-     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-     crossorigin="anonymous"
-   ></script>
-   <!--link aos js-->
-   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-   <script>
-     AOS.init();
-   </script>
+    <!--link bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!--link aos js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
